# sudspy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
data/multi_chan_picks/: c3244  locu.dmx
data/multi_files/: 2023-11-24_0001_02_ABM5Y.dmx  2023-11-24_0003_02_ABM5Y.dmx  2023-11-24_0006_02_ABM5Y.dmx
data/multi_files/overlaps/: 2023-11-24 2057 02 ABM5Y.dmx  2023-11-24_2057_02_ABM5Y.dmx  2023-11-24_2057_48_ABM5Y.dmx  combined.dmx
data/multi_files/sequence/: 2023-11-24_0007_02_ABM5Y.dmx  2023-11-24_0008_02_ABM5Y.dmx  combined.suds
data/multi_files/suds_cat/: 2023-11-24_0000_02_ABM5Y.dmx  2023-11-24_0002_02_ABM5Y.dmx  2023-11-24_0004_02_ABM5Y.dmx  2023-11-24_0009_02_ABM5Y.dmx  2023-11-24_0010_02_ABM5Y.dmx
data/multi_stations/: 2025-12-05 0952 Mansfield Vic.dmx  2_stations.sud  both.sud  hml1.sud  locu.sud  locu_vert.sud
data/single_chan/: locu_seismosphere.sud
data/single_chan_picks/: locu_waves_MAX.dmx  locu_waves_P.dmx  locu_waves_PG.dmx  locu_waves_S-Amp.dmx  locu_waves_S.dmx  locu_waves_eP.dmx  locu_waves_i+P.dmx
notebooks/: test_functions.ipynb
notebooks/.ipynb_checkpoints/: multi_station_inventory-checkpoint.ipynb  test_functions-checkpoint.ipynb
sudspy/: __init__.py  blocks.py  collections.py  constants.py  io.py  obspy.py  parsers.py  utils.py
sudspy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_blocks.py  test_io.py
